added animation to layer-10 and layer-6

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
     <div>
         <img src="assets/10.svg" alt="" class="layer-10">
     </div>
+    <script src="animation.js"></script>
 </body>
 </html>
