--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
     <div>
         <img src="assets/10.svg" class="layer-10">
     </div>
-
+    <div class="box">
+        <a class="glitch">APOGEE</a>
+        
+      </div>
 
     <script src="animation.js"></script>
 
